--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "nodemon index.js",
+    "debug": "nodemon --inspect index.js",
     "start": "pm2 start index.js",
     "test": "jest --watchAll --no-cache --detectOpenHandles"
   },
