--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "verbose": true
   },
   "scripts": {
-    "dev": "nodemon index.js",
-    "debug": "nodemon --inspect index.js",
+    "dev": "nodemon -r dotenv/config index.js",
+    "debug": "nodemon --inspect -r dotenv/config index.js",
     "start": "pm2 start index.js",
     "test": "jest --watchAll --no-cache --detectOpenHandles"
   },
@@ -16,7 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "pm2": "^5.2.2",
     "uuid": "^9.0.0"
   },
